# ssr-benchmarks

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
client/: package-lock.json  package.json  webpack.client.config.js  webpack.next.config.js  webpack.server.config.js
client/src/: app.js  components.js  html.js  node-client.js  node-server.js  rust-client.js  rust-server.js  styles.css
scripts/: _env  _print  bench  bench.js  bench.rs  run-next-server  run-node-server  run-rust-server  seed.rs  setup
servers/next-server/: package-lock.json  package.json
servers/next-server/pages/: _app.js  index.js
servers/node-server/: package-lock.json  package.json  server.js
servers/rust-server/: Cargo.toml  package-lock.json  package.json  sqlx-data.json
servers/rust-server/src/: env.rs  etag.rs  main.rs  server.rs
servers/rust-server/src/gql/: db.rs  http.rs  mod.rs  result.rs  schema.rs
servers/rust-server/src/gql/queries/: posts.rs
servers/rust-server/src/pg/queries/: get_posts.rs
servers/rust-server/src/ssr/: mod.rs  posts.rs
