[package]
name = "ssr-benchmarks"
version = "0.0.1"
edition = "2018"
authors = ["Alex Fedoseev <alex.fedoseev@gmail.com>"]

[[bin]]
name = "seed"
path = "./scripts/seed.rs"

[[bin]]
name = "bench"
path = "./scripts/bench.rs"

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = "0.3.8"
sqlx = { version = "0.4.2", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "offline", "uuid" ] }
reqwest = "0.10.10"
rand = "0.8.0"
lipsum = "0.7.0"

[workspace]
members = [
  "servers/rust-server"
]
